--- a/src/Huskui.Gallery/Views/Controls/DividersPage.axaml
+++ b/src/Huskui.Gallery/Views/Controls/DividersPage.axaml
@@ -8,7 +8,7 @@
              x:Class="Huskui.Gallery.Views.Controls.DividersPage">
 
     <ScrollViewer Padding="48">
-        <StackPanel Spacing="32" MaxWidth="1000">
+        <StackPanel Spacing="32" HorizontalAlignment="Center" MinWidth="800">
             <!-- Page Header -->
             <StackPanel Spacing="8">
                 <TextBlock Text="Dividers"
