--- a/src/Huskui.Gallery/Views/Input/ButtonsPage.axaml
+++ b/src/Huskui.Gallery/Views/Input/ButtonsPage.axaml
@@ -9,7 +9,7 @@
              x:Class="Huskui.Gallery.Views.Controls.ButtonsPage">
 
     <ScrollViewer Padding="48">
-        <StackPanel Spacing="32" MaxWidth="1000">
+        <StackPanel Spacing="32" HorizontalAlignment="Center" MinWidth="800">
             <!-- Page Header -->
             <StackPanel Spacing="8">
                 <TextBlock Text="Buttons"
