--- a/src/Huskui.Gallery/Views/Input/DropDownButtonsPage.axaml
+++ b/src/Huskui.Gallery/Views/Input/DropDownButtonsPage.axaml
@@ -9,7 +9,7 @@
              x:Class="Huskui.Gallery.Views.Input.DropDownButtonsPage">
 
     <ScrollViewer Padding="48">
-        <StackPanel Spacing="32" MaxWidth="1000">
+        <StackPanel Spacing="32" HorizontalAlignment="Center" MinWidth="800">
             <!-- Page Header -->
             <StackPanel Spacing="8">
                 <TextBlock Text="DropDown Buttons"
@@ -27,16 +27,16 @@
                         <TextBlock Text="Button Controls" FontWeight="Bold" FontSize="14" />
                         <ToggleButton x:Name="SizeToggle" Content="Large Size" />
                         <Button Content="Show All Flyouts" Click="OnShowAllFlyoutsClick" />
-                        <TextBlock Text="Toggle size and test flyout interactions." 
-                                   TextWrapping="Wrap" 
-                                   FontSize="12" 
+                        <TextBlock Text="Toggle size and test flyout interactions."
+                                   TextWrapping="Wrap"
+                                   FontSize="12"
                                    Foreground="{StaticResource ControlSecondaryForegroundBrush}" />
                     </StackPanel>
                 </controls:ExampleContainer.Controls>
-                
+
                 <StackPanel Spacing="16" HorizontalAlignment="Center">
                     <StackPanel Orientation="Horizontal" Spacing="12">
-                        <DropDownButton Content="Actions" 
+                        <DropDownButton Content="Actions"
                                         Classes.Large="{Binding #SizeToggle.IsChecked}">
                             <DropDownButton.Flyout>
                                 <MenuFlyout>
@@ -47,8 +47,8 @@
                                 </MenuFlyout>
                             </DropDownButton.Flyout>
                         </DropDownButton>
-                        
-                        <DropDownButton Content="File" 
+
+                        <DropDownButton Content="File"
                                         Classes.Large="{Binding #SizeToggle.IsChecked}">
                             <DropDownButton.Flyout>
                                 <MenuFlyout>
@@ -60,8 +60,8 @@
                                 </MenuFlyout>
                             </DropDownButton.Flyout>
                         </DropDownButton>
-                        
-                        <DropDownButton Content="Tools" 
+
+                        <DropDownButton Content="Tools"
                                         Classes.Large="{Binding #SizeToggle.IsChecked}">
                             <DropDownButton.Flyout>
                                 <MenuFlyout>
@@ -88,7 +88,7 @@
                                 </MenuFlyout>
                             </DropDownButton.Flyout>
                         </DropDownButton>
-                        
+
                         <DropDownButton Content="Primary" Classes="Primary">
                             <DropDownButton.Flyout>
                                 <MenuFlyout>
@@ -97,7 +97,7 @@
                                 </MenuFlyout>
                             </DropDownButton.Flyout>
                         </DropDownButton>
-                        
+
                         <DropDownButton Content="Success" Classes="Success">
                             <DropDownButton.Flyout>
                                 <MenuFlyout>
@@ -106,7 +106,7 @@
                                 </MenuFlyout>
                             </DropDownButton.Flyout>
                         </DropDownButton>
-                        
+
                         <DropDownButton Content="Warning" Classes="Warning">
                             <DropDownButton.Flyout>
                                 <MenuFlyout>
@@ -115,7 +115,7 @@
                                 </MenuFlyout>
                             </DropDownButton.Flyout>
                         </DropDownButton>
-                        
+
                         <DropDownButton Content="Danger" Classes="Danger">
                             <DropDownButton.Flyout>
                                 <MenuFlyout>
@@ -140,7 +140,7 @@
                                 </MenuFlyout>
                             </DropDownButton.Flyout>
                         </DropDownButton>
-                        
+
                         <DropDownButton Content="Default">
                             <DropDownButton.Flyout>
                                 <MenuFlyout>
@@ -149,7 +149,7 @@
                                 </MenuFlyout>
                             </DropDownButton.Flyout>
                         </DropDownButton>
-                        
+
                         <DropDownButton Content="Large" Classes="Large">
                             <DropDownButton.Flyout>
                                 <MenuFlyout>
@@ -194,7 +194,7 @@
                                 </MenuFlyout>
                             </DropDownButton.Flyout>
                         </DropDownButton>
-                        
+
                         <DropDownButton Classes="Primary">
                             <husk:IconLabel Icon="Add" Text="Create" />
                             <DropDownButton.Flyout>
@@ -227,7 +227,7 @@
                 <husk:Card Padding="16" Width="600">
                     <StackPanel Spacing="16">
                         <TextBlock Text="Document Editor Toolbar" FontSize="16" FontWeight="Bold" />
-                        
+
                         <StackPanel Orientation="Horizontal" Spacing="8">
                             <DropDownButton Content="File" Classes="Small">
                                 <DropDownButton.Flyout>
@@ -244,7 +244,7 @@
                                     </MenuFlyout>
                                 </DropDownButton.Flyout>
                             </DropDownButton>
-                            
+
                             <DropDownButton Content="Edit" Classes="Small">
                                 <DropDownButton.Flyout>
                                     <MenuFlyout>
@@ -260,7 +260,7 @@
                                     </MenuFlyout>
                                 </DropDownButton.Flyout>
                             </DropDownButton>
-                            
+
                             <DropDownButton Content="Format" Classes="Small">
                                 <DropDownButton.Flyout>
                                     <MenuFlyout>
@@ -275,7 +275,7 @@
                                     </MenuFlyout>
                                 </DropDownButton.Flyout>
                             </DropDownButton>
-                            
+
                             <DropDownButton Content="Insert" Classes="Small">
                                 <DropDownButton.Flyout>
                                     <MenuFlyout>
@@ -288,7 +288,7 @@
                                     </MenuFlyout>
                                 </DropDownButton.Flyout>
                             </DropDownButton>
-                            
+
                             <DropDownButton Content="View" Classes="Small">
                                 <DropDownButton.Flyout>
                                     <MenuFlyout>
@@ -303,11 +303,11 @@
                                 </DropDownButton.Flyout>
                             </DropDownButton>
                         </StackPanel>
-                        
+
                         <husk:Divider />
-                        
-                        <TextBlock Text="Click any dropdown to see the available actions for that menu." 
-                                   FontSize="12" 
+
+                        <TextBlock Text="Click any dropdown to see the available actions for that menu."
+                                   FontSize="12"
                                    Foreground="{StaticResource ControlSecondaryForegroundBrush}" />
                     </StackPanel>
                 </husk:Card>
